k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-api
  labels:
    app: devops-api

spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: devops-api

  template:
    metadata:
      labels:
        app: devops-api

    spec:
      containers:
        - name: devops-api
          image: sachinj6277/devops-api:11
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
