k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-api-service

spec:
  type: LoadBalancer

  selector:
    app: devops-api

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
